samples/_failures_safe/1761481205_cc17a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1d823d6.c: In function ‘main’:
./samples/SAFE/__tmp_b1d823d6.c:136:9: error: expected expression at end of input
  136 |         if (src <
      |         ^~
./samples/SAFE/__tmp_b1d823d6.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1d823d6.c:136:9: error: expected declaration or statement at end of input
